# APP_Projects

.github/workflows/: main.yml
00-csr-react-supabase/: tailwind.config.js
00-csr-react-supabase/db_backup/: db_cluster-22-08-2024@04-16-36.backup
00-csr-react-supabase/src/services/: api-bookings.ts
02-ssg-astro/: README.md  astro.config.mjs  package.json
02-ssg-astro/public/: scroll.js
02_SSG_Astro_Tailwind/: package-lock.json  tailwind.config.mjs
03-django-postgres/: .flake8  Dockerfile  README.md  docker-compose-production.yml  docker-compose.yml  requirements.txt  schema.yaml
03-django-postgres/proxy/: Dockerfile  run.sh
03-django-postgres/scripts/: run.sh
03-django-postgres/src/: .flake8
03_Django_Postgres/: Dockerfile  README.md  pyproject.toml  requirements.dev.txt
03_Django_Postgres/.github/workflows/: checks.yml
03_Django_Postgres/app/app/: settings.py
03_Django_Postgres/recipes/: settings.py
03_SSR_Django_Postgres/: Dockerfile  README.md  docker-compose-production.yml  docker-compose.yml  requirements.dev.txt  requirements.txt
03_SSR_Django_Postgres/proxy/: Dockerfile  run.sh
03_SSR_Django_Postgres/scripts/: run.sh
04-ssr-node-sqlite/: README.md  database.db  pnpm-lock.yaml  tsconfig.json
04-ssr-node-sqlite/src/: app.ts
04_SSR_Node_SQLite/: .env.example  .gitignore  package.json  postman_collection.json
04_SSR_Node_SQLite/src/: server.ts
05-csr-react-node-mongo/api/: Dockerfile  config.env  docker-compose.yaml  package-lock.json  package.json  rest.http  tsconfig.json
05-csr-react-node-mongo/client/: package.json
(+129 files in other folders)
