[tool.poetry]
name = "recipes"
version = "1.0.0"
description = "Rest API with auth, postgres, docker, TDD and github actions"
authors = ["JaviPSanchez <javier.palomino-sanchez@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
